fixing overflowing contents from the body

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     font-weight: 400;
+    width: 100%;
 }
 .attribution {
     font-size: 11px; text-align: center;
@@ -22,6 +23,10 @@ header{
     justify-content: space-between;
     width: 100%;
     height: 70px;
+}
+header > img{
+    margin-left: 20px;
+    padding: 20px;
 }
 nav ul{
     list-style: none;
@@ -46,13 +51,6 @@ nav ul li a{
     cursor: pointer;
     display: none;
 } 
-h2{
-    font-family: 'Raleway', sans-serif; 
-}
-header > img{
-    margin-left: 20px;
-    padding: 20px;
-}
 ul li a{
     text-decoration: none;
 }
@@ -103,10 +101,7 @@ figcaption{
     font-size: 1.2em;
 }
 .benefit{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px;
-    padding: 10px 30px;
+  display: flex; 
 }
 .arrow{
     text-decoration: none;
@@ -153,6 +148,9 @@ figcaption{
     grid-template-columns: 50px 200px;
     padding-top: 30px;
     column-gap: 20px;
+}
+.illustrative-img{
+    max-width: 100%;
 }
 .about,.benefit,.testimonial,.cta{
     background-color: hsl(218, 28%, 13%);
@@ -251,26 +249,27 @@ ul li i:hover{
     }
     nav ul{
         position: fixed;
-        top: 50px;
-        transform: translateX(100%);
+        top: 70px;
         right: 0;
         flex-direction: column;
-        width: 100%;
-        z-index: 2;
-        transition: all 2s;
-        height: 100vh;
         background-color: hsl(217, 28%, 15%);
+        height: 100vh;
+        width: 100%;
+        z-index: 5;
+        transform: translateX(100%);
+        transition: all .5s;
         overflow: hidden;
     }
     #check:checked ~ nav ul{
         transform: translateX(50%);
     }
     nav ul li{
-        margin-top: 20px;
         padding: 20px;
+        margin: 10px;
     }
     nav ul li a{
         font-size: 25px;
+        color: #fff;
     }
     .content{
         position: relative;
@@ -281,7 +280,7 @@ ul li i:hover{
         grid-row-gap: 100px;
     }
     .benefit{
-        grid-template-columns: 1fr;
+       flex-direction: column;
     }
     .testimonial-container{
         width: 100%;
@@ -337,13 +336,4 @@ ul li i:hover{
             position: relative;
             bottom: 400px;
         }
-    }
-@media only screen and (max-width:900px){
-    .benefit{
-        min-width: 900px;
-    }
-    .productive{
-        line-height: 3em;
-        margin-top: 40px;
-    }
-}
+    } 
